--- a/index.html
+++ b/index.html
@@ -11,23 +11,70 @@
 
 <body>
 
-    <header class="row">
-        <div class="col-md-6" id="Highscores">
-            <a href="./highScore.html">View Highscores</a>
+    <header class="header">
+        <div>
+            <a href="#high-scores">View Highscores</a>
         </div>
-        <div class="col-md-6" id="timer">
+        <div id="timer">
             Time: <span id="time">0</span>
         </div>
     
     </header>
 
-    
-    <div class="container">
-        <h1 class="welcome">Are you ready?</h1>
-        <button id="start">Start</button>
-        <h2 id="countdown"></h2>
-        <p id="main"></p>
-    </div>
+    <section id="title-section" class="show">
+        <div class="row">
+            <div>
+                <h1>Coding Quiz Challenge</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <p>Try and answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your your score time by 10 seconds!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <button id="startButton">Start Quiz</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="quiz-section" class="hide">
+        <div class="row">
+            <div >
+                <h3 id="question-title"></h3>
+            </div>
+        </div>
+        <div class="row">
+            <div id="choices"></div>
+            <div id="feedback" class="feedback hide"></div>
+        </div>
+    </section>
+
+    <section id="high-score-section" class="hide">
+        <div class="row">
+            <div id="high-score">
+                <h2>All done!</h2>
+                <h3>Your final score is <span id="final-score">0</span></h3>
+                <label for="initials-area">Enter initials:</label>
+                <input type="text" name="initials-area" maxlength="4" id="initials">
+                <button id="submit-button" type="submit">Submit</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="high-scores" class="hide">
+        <div class="row">
+            <div id="high-score">
+                <h2>All done!</h2>
+                <h3>Your final score is <span id="final-score">0</span></h3>
+                <label for="initials-area">Enter initials:</label>
+                <input type="text" name="initials-area" maxlength="4" id="initials">
+                <button id="submit-button" type="submit">Submit</button>
+            </div>
+        </div>
+    </section>
+
     <script src="./assets/js/script.js"></script>
 </body>
 
