formatted landing page

--- a/index.html
+++ b/index.html
@@ -21,38 +21,28 @@
     
     </header>
 
-    <section id="title-section" class="show">
-        <div class="row">
-            <div>
-                <h1>Coding Quiz Challenge</h1>
-            </div>
+    <section id="title-section" class="landing-page">
+        <div>
+            <h1>Coding Quiz Challenge</h1>
         </div>
-        <div class="row">
-            <div>
-                <p>Try and answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your your score time by 10 seconds!</p>
-            </div>
+        <div class="instructions">
+            <p>Try and answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your your score time by 10 seconds!</p>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <button id="startButton">Start Quiz</button>
-            </div>
+        <div>
+            <button id="startButton">Start Quiz</button>
         </div>
     </section>
 
     <section id="quiz-section" class="hide">
-        <div class="row">
-            <div >
-                <h3 id="question-title"></h3>
-            </div>
+        <div>
+            <h3 id="question-title"></h3>
         </div>
-        <div class="row">
-            <div id="choices"></div>
-            <div id="feedback" class="feedback hide"></div>
-        </div>
+        <div id="choices"></div>
+        <div id="feedback" class="feedback"></div>
     </section>
 
     <section id="high-score-section" class="hide">
-        <div class="row">
+        <div>
             <div id="high-score">
                 <h2>All done!</h2>
                 <h3>Your final score is <span id="final-score">0</span></h3>
@@ -64,7 +54,7 @@
     </section>
 
     <section id="high-scores" class="hide">
-        <div class="row">
+        <div>
             <div id="high-score">
                 <h2>All done!</h2>
                 <h3>Your final score is <span id="final-score">0</span></h3>
