--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     </header>
 
-    <section id="title-section" class="landing-page">
+    <section id="title-section" class="show">
         <div>
             <h1>Coding Quiz Challenge</h1>
         </div>
@@ -37,7 +37,7 @@
         <div>
             <h3 id="question-title"></h3>
         </div>
-        <div id="choices"></div>
+        <div id="options"></div>
         <div id="feedback" class="feedback"></div>
     </section>
 
