message section on submit form

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <input type="text" name="initials-area" maxlength="4" id="initials">
                 <button id="submit-button" type="submit">Submit</button>
             </div>
+            <div id="msg"></div>
         </div>
     </section>
 
