display high score list

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>High Scores</h2>
         </div>
         <div>
-            <ol id="scores"></ol>
+            <ol class= "list" id="scores-list"></ol>
         </div>
         <div>
             <a href="./index.html"><button id="play-again">Play Again</button></a>
