--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <div>
-            <a href="#high-scores">View Highscores</a>
+            <button class="link-score" id="score-btn">View high scores</button>
         </div>
         <div id="timer">
             Time: <span id="time">0</span>
